--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: page
-title: thafaker.github.io
+title: JanMontag.de
 subtitle: thaHipsters last stand!
 use-site-title: true
 ---
@@ -60,12 +60,12 @@ use-site-title: true
 <ul class="pager main-pager">
   {% if paginator.previous_page %}
   <li class="previous">
-    <a href="{{ paginator.previous_page_path | relative_url }}">&larr; Newer Posts</a>
+    <a href="{{ paginator.previous_page_path | relative_url }}">&larr; Neuere Einträge</a>
   </li>
   {% endif %}
   {% if paginator.next_page %}
   <li class="next">
-    <a href="{{ paginator.next_page_path | relative_url }}">Older Posts &rarr;</a>
+    <a href="{{ paginator.next_page_path | relative_url }}">Ältere Einträge &rarr;</a>
   </li>
   {% endif %}
 </ul>
